remove not used files

--- a/src/pug/core/pixlayout.pug
+++ b/src/pug/core/pixlayout.pug
@@ -1,10 +1,9 @@
-// Pixel Perfect scripts
+//- Pixel Perfect scripts
 script(src='js/libs/jquery.pixlayout.min.js', async=false, defer=false)
 script.
   $(function () {
     $.pixlayout({
       src: 'img/layout-home.jpg',
-      //src: 'img/layout-home-mob.jpg',
       opacity: 0.6,
       step: 1,
       top: 0,
