--- a/src/pug/include/template.pug
+++ b/src/pug/include/template.pug
@@ -7,7 +7,7 @@
 - var ie = false
 - var browser_upgrade = false
 - var preloader = true
-- var pixlayout = true
+- var pixlayout = false
 - var svg_inline = true
 - var common_js_min = false
 - var cdn = false
