--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,4 +3,30 @@ extends include/template
 block title
   | 1500+ Flat Design Web Buttons
 block content
+  //- http://chir.ag/projects/name-that-color/#6195ED
+  //- http://colorscheme.ru/color-names.html
+  //- http://whoyougle.ru/services/color/1A4876
+  .container
+    .row
+      .col-lg-12
+        .col-lg-2
+          span.btn.btn--yukon-gold test
+          div.btn.btn--yukon-gold test
+          a(href='#').btn.btn--yukon-gold test
+          input(type='submit', value='test').btn.btn--yukon-gold
+          input(type='reset', value='test').btn.btn--yukon-gold
+          input(type='button', value='test').btn.btn--yukon-gold
+          button(type='submit').btn.btn--yukon-gold test
+          button(type='reset').btn.btn--yukon-gold test
+          button(type='button').btn.btn--yukon-gold test
+        .col-lg-2
+          span.btn.btn--bourbon test
+        .col-lg-2
+          span.btn.btn--brick-red test
+        .col-lg-2
+          span.btn.btn--curious-blue test
+        .col-lg-2
+          span.btn.btn--blue-bibbon test
+        .col-lg-2
+          span.btn.btn--la-palma test
 block script
