add fonts, add structure for btn, 7 set from 50 is done

--- a/src/pug/include/template.pug
+++ b/src/pug/include/template.pug
@@ -43,6 +43,7 @@ head
     <!--[if IEMobile]>
     meta(http-equiv='cleartype', content='on')
     <![endif]-->
+  link(href='https://fonts.googleapis.com/css?family=Lato', rel='stylesheet')
   if !css_min
     link(href='css/main.css', rel='stylesheet', media='all')
   else
