--- a/src/sass/utilities/mixins/css3/_background-size.scss
+++ b/src/sass/utilities/mixins/css3/_background-size.scss
@@ -1,3 +1,3 @@
-@mixin background-size($value: auto auto) {
-  @include prefixer(background-size, $value, webkit moz spec);
+@mixin background-size($size...) {
+  @include prefixer(background-size, $size, webkit moz o spec);
 }
